Fixed: Align min-height of bookmarks sub-panel in loading/normal state

--- a/src/styles/themes/proton/sidebar/sub-panel.bookmarks.styl
+++ b/src/styles/themes/proton/sidebar/sub-panel.bookmarks.styl
@@ -100,7 +100,7 @@
 
 .BookmarksSubPanel .bookmarks-tree
   position: relative
-  padding: 0 0 32px 0
+  padding: 0 0 40px 0
 
 .BookmarksSubPanel .loading-screen
   position: relative
